style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

body {
  background-color: #eeeeee;
}

h1 {
  font-size: 2.5rem;
  padding: 1.5rem 0;
  font-weight: 800 !important;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Montserrat", sans-serif;
  letter-spacing: -0.05rem;
  font-weight: 700;
}

p,
a,
li {
  font-family: "Work Sans", sans-serif;
}

/* Header */

header {
  margin-bottom: 3rem;
}

.date-time-social {
  background-color: #fff;
  display: flex;
  justify-content: space-between;
  padding: 1rem 5rem;
}

.date-time-social p {
  margin: 0;
}

#current_date {
  color: #751f7c;
}

#current_time {
  background-color: #751f7c;
  color: white;
  font-weight: bold;
  margin-left: 0.5rem;
  padding: 0.1rem;
  border-radius: 2px;
}

.date-time-social a {
  color: #0079fa;
  margin: 0 10px;
  text-decoration: none;
}

.date-time-social a:hover {
  color: black;
  text-decoration: underline;
}

.top-topics {
  background-color: #fff;
  padding: 0.5rem 5rem;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.top-topics p {
  margin: 0 1rem;
  padding: 0;
  font-weight: bold;
}

.top-topics a {
  margin: 0 0.5rem;
  background-color: #f3eeee;
  color: #751f7c;
  padding: 5px;
  text-decoration: none;
}

.top-topics a:hover {
  background-color: #751f7c;
  color: white;
}

/* Nav bar */

nav {
  background-color: #751f7c;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem 5rem;
}

nav img {
  height: 75px;
}

nav a {
  color: white;
  text-decoration: none;
  padding: 0 1rem;
}

nav a:hover {
  text-decoration: underline;
}

.desktop-menu {
  display: flex;
  align-items: center;
}

.desktop-menu > .current-page {
  font-weight: bold;
}

#open-mobile-menu {
  background-image: url("/images/icons/menu.svg");
  border-radius: 0.5rem;
}

#open-mobile-search,
#open-desktop-search {
  background-image: url("/images/icons/search.svg");
  background-size: 50%;
  border-radius: 0.5rem;
}

.desktop-menu button {
  background-color: transparent;
  background-position: center;
  background-size: 25%;
  background-repeat: no-repeat;
  height: 50px;
  width: 50px;
  border: none;
  transition: ease-in-out 0.3s;
}

.desktop-menu button:hover {
  cursor: pointer;
  background-color: #002954;
}

.mobile-buttons {
  display: none;
}

/* Search bar */

#search-bar {
  height: 5rem;
  background: #000;
  justify-content: center;
  align-items: center;
}

#cludo-search-form {
  width: 100%;
  display: flex;
  justify-content: center;
}

#search-bar input {
  width: 50%;
  height: 2.5rem;
  padding: 0 1rem;
}

#search-bar button {
  height: 2.5rem;
  width: 2.5rem;
  background: url("/images/icons/search.svg");
  background-repeat: no-repeat;
  background-position: center;
  background-color: #751f7c;
  border: none;
  border-radius: 0 5px 5px 0;
}

#search-bar button:hover {
  background-color: #002954;
  cursor: pointer;
}

/* Mobile menu */

#mobile-menu {
  background-color: #751f7c;
  flex-wrap: wrap;
}

#mobile-menu a {
  color: white;
  width: 100%;
  padding: 1rem 3rem;
  text-decoration: none;
}

#mobile-menu a:hover {
  text-decoration: underline;
}

/* Banner ad */
.banner-ad {
  margin: 2rem 0;
  display: flex;
  justify-content: center;
  width: 100%;
}

.banner-ad img {
  max-width: 100%;
}

/* Page intro */
.page-intro {
  background-color: #fff;
  margin-top: 0.5rem;
  padding: 3rem 4rem;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
}

.page-intro h1 {
  margin: 0;
  padding: 0;
  padding-bottom: 1rem;
  font-family: "Montserrat", sans-serif;
  font-weight: 700;
}

/* Homepage posts */
main {
  width: 66%;
  padding: 0 3rem;
  float: left;
  margin-bottom: 2rem;
}

article {
  display: flex;
  height: 375px;
  margin-bottom: 2rem;
  background-color: white;
  border: 1px solid #dddcdc;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
}

article > div {
  height: 100%;
  width: 50%;
  padding: 1rem;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-clip: content-box;
}

article .tags {
  margin-top: 1rem;
}

.tags {
  display: inline-block;
}

.tags a:hover,
.tags a:focus {
  transition: ease-in-out 0.3s;
  background-color: #0079fa;
}

.tag-icon {
  background-image: url(/images/icons/tag.svg);
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  width: 20px;
  height: 20px;
  display: inline-block;
  vertical-align: middle;
}

.tags > a {
  text-decoration: none;
  color: #fff;
  background-color: #751f7c;
  border-radius: 3px;
  padding: 3px;
  display: inline-block;
  margin-bottom: 0.5em;
}

.meta-info {
  margin-bottom: 0.5rem;
}

.meta-info > a {
  color: #757575;
  margin-right: 10px;
}

.meta-info > a > img {
  margin-right: 0.5rem;
}

.meta-info > a:hover {
  color: #751f7c;
}

article a {
  color: #000;
  text-decoration: none;
}

article h4 {
  font-size: 24px;
  margin: 1rem 0;
  text-decoration: underline;
}

article h4:hover {
  color: #751f7c;
}

/* Pagination */

.pages {
  display: flex;
  justify-content: center;
  margin-bottom: 5rem;
}

.pages a {
  background-color: #fff;
  color: #757575;
  font-size: 1.2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 3rem;
  width: 3rem;
  margin: 0 0.5rem;
  text-decoration: none;
  border-radius: 5px;
  transition: ease-in-out 0.3s;
}

.pages a:hover,
.pages .current-page {
  background-color: #751f7c;
  color: #fff;
}

/* Aside */
aside {
  width: 33%;
  padding-right: 5rem;
  float: right;
}

aside div {
  background-color: white;
  margin-bottom: 3rem;
}

aside div img {
  display: block;
  width: 100%;
}

.aside-content {
  padding: 1rem;
}

.aside-h6-wrapper {
  display: block;
  border-bottom: 2px solid #751f7c;
}
/* ... */

